# learn_rust

./: LICENSE
bootcamp/api/: .env  README.md  Stage1.md  Stage2.md  Stage3.md
bootcamp/api/src/: main.rs
bootcamp/api/src/handlers/: mod.rs
bootcamp/cli/: Problem.md  Stage1.md  Stage2.md  Stage3.md
bootcamp/cli/src/: db.rs  io_utils.rs  main.rs  navigator.rs
bootcamp/cli/src/ui/: prompts.rs
bootcamp/cli/src/ui/pages/: mod.rs
monitoring/: README.md
monitoring/rmq/: Cargo.toml
monitoring/rmq/src/: juggler.rs  main.rs  rmq.rs
monitoring/zoo1/src/: main.rs  zoo.rs
monitoring/zoo2/: Cargo.toml
monitoring/zoo2/src/: main.rs  zoo.rs
monitoring/zoo3/src/: juggler.rs  main.rs  zoo.rs
monitoring/zoo4/: Cargo.toml
monitoring/zoo4/src/: main.rs  zoo.rs
monitoring/zoo5/src/: main.rs  zoo.rs
monitoring/zoo6/: Cargo.toml
monitoring/zoo6/src/: zoo.rs
